--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,37 @@
+# URL cloudinary untuk upload banner
 CLOUDINARY_URL = "cloudinary://api_key:secret_key"
+
+# Ini adalah credential untuk email JS, buat akun di email JS dan masukkan ke sini
+VITE_SERVICE_ID = service_exampleID
+VITE_TEMPLATE_ID = template_exampleID
+VITE_USER_ID = 4_nJ_7TTYexample_USerID
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=db_haventwined
+DB_USERNAME=root
+DB_PASSWORD=
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME= abyalaxx@gmail.com
+MAIL_PASSWORD= password
+MAIL_ENCRYPTION= tls
+MAIL_FROM_ADDRESS="abyalaxx@gmail.com"
+MAIL_FROM_NAME="${APP_NAME}"
 
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:zB+7Lgr6MCH2MeiRM7zUhpG609p0G2I/3ACh6+sunhc=
 APP_DEBUG=true
+LOG_CHANNEL=stack
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,15 +45,6 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
